Expose Genlock status on webpage

--- a/src/opt/blt/site/style.css
+++ b/src/opt/blt/site/style.css
@@ -27,3 +27,13 @@
 .dechist {
 }
 
+.nogenlock {
+    background: red;
+    color: white;
+    padding: 0px 2px;
+}
+.genlock {
+    background: green;
+    color: white;
+    padding: 0px 2px;
+}
