Add a clock (based on PC time) for help with syncing output

--- a/src/opt/blt/site/style.css
+++ b/src/opt/blt/site/style.css
@@ -37,3 +37,11 @@
     color: white;
     padding: 0px 2px;
 }
+#rtc {
+    width: 200px;
+    text-align: center;
+}
+#thetime {
+    font-family: monospace
+}
+
