Fix leading/trailing on the audio
If latency calculation is really off (> 50 frames or < 0 frames), run an NTP che
ck to confirm if the reader is in sync

--- a/src/opt/blt/site/style.css
+++ b/src/opt/blt/site/style.css
@@ -27,6 +27,12 @@
 .dechist {
 }
 
+
+.error {
+    font-weight: bolder;
+    font-size: larger;
+}
+
 .nogenlock {
     background: red;
     color: white;
